style.css
/* Theme Name: MageKarma */

/* Global */
body { background: url("images/bg-3025.jpg") no-repeat center center fixed; margin: 0; font-family: GothamHTF-XLight, sans-serif; font-size: 14px; color: #4a4a4a }
a { color: #f49d00 }
h1, h2, h3, h4, h5 { font-family: GothamHTF-Medium, sans-serif }
code { background: #eeeeee; padding: 1px 5px }
.left { float: left }
.right { float: right }
.main-container { margin: 0 auto; width: 890px }

/* Header */
.header { margin: 63px 0 87px 0 }
.header .logo { display: block; width: 122px; height: 100px; background-color: #ffffff; border-radius: 75px; text-transform: uppercase; color: #4a4a4a; text-decoration: none; font-size: 23px; padding: 50px 0 0 28px }
.header .logo strong { display: block; font-family: GothamHTF-Bold, sans-serif }
.header h1 { margin: 64px 0 0 48px; color: #ffffff; font-size: 20px; font-family: GothamHTF-XLight, sans-serif; font-weight: normal }
.menu-container { margin-top: 60px; position: relative }
.menu-container ul { display: none; position: absolute; background-color: #ffffff; border-radius: 3px; padding: 20px 20px 5px; list-style: none; font-size: 14px; color: #4a4a4a; width: 135px; right: 0; box-shadow: 0 0 10px 0 rgba(16, 16, 16, 0.2) }
.menu-container ul li { padding-bottom: 15px }
.menu-container ul li a { color: #4a4a4a; display: block; text-decoration: none }
.menu-container ul li a:hover { text-decoration: underline }

/* Content */
.content { background-color: #ffffff; border-radius: 5px; padding: 40px }
.content h2 { font-size: 36px; margin-top: 0 }
.content p, .content ul { line-height: 20px }
.back-link { margin: 20px auto; width: 380px; text-align: center; background: url(images/back-link-arrow.png) no-repeat left center; display: block; font-size: 36px; font-family: GothamHTF-XLight, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; padding-left: 50px  }
.avatar { width: 80px; height: 80px; border-radius: 40px; margin-right: 30px }
.comments-area, .author-area, .stats-area { border-top: #979797 solid 1px; margin-top: 30px }
.stats-area { border-bottom: #979797 solid 1px; padding: 17px 0 }
.stats-area ul { float: left; width: 50%; margin: 0; padding: 0; list-style: none }
.stats-area ul li { margin-bottom: 8px }
.stats-area .score { font-size: 18px; margin: 5px 0 20px }
.stats-area .score span { color: #f49d00; font-family: GothamHTF-Bold, sans-serif }
.author-area > .left { width: 50% }
.author-area .bio > strong { display: block; font-family: GothamHTF-Bold, sans-serif; margin: 7px 0 }
.author-area .bio { width: 245px; }

/* Comments */
.comments-area ul { list-style: none; padding-left: 40px }
.comments-area .commentlist { padding-left: 0 }
.comments-area .comment-author { float: left; width: 80px; margin: 0 20px 20px 0; text-align: center }
.comments-area .says { display: none }
.comments-area .comment-body { margin-bottom: 10px }
.comment-respond input, .comment-respond textarea { width: 500px; font-size: 14px; border-radius: 3px; border: #979797 solid 1px; display: block; padding: 10px; margin-bottom: 10px }
.form-submit { margin-bottom: 0 }
.form-submit input { width: 200px; background-color: #f49d00; color: #ffffff; border: none; margin-bottom: 0 }

/* Scores */
.stats-area .score span.very_good, .passed { color: #24890d }
.stats-area .score span.poor, .failed, .low { color: #f04040 }

/* Footer */
.footer { background-color: #292f33; border-top-left-radius: 5px; border-top-right-radius: 5px; margin-top: 50px; text-align: right; padding: 30px }
.footer ul { margin: 0 }
.footer li { display: inline-block; margin-left: 25px }
.footer li a { color: #ffffff; text-decoration: none }
.footer li a:hover { text-decoration: underline }

/* Clearer */
.header:after, .author-area:after, .author-area > .left:after, .stats-area:after, .comment-body:after { content: ""; display: block; height: 0; clear: both; visibility: hidden }

/* Media queries */
@media ( max-width: 2499px ) {
    body { background-image: url("images/bg-2500.jpg") }
}

@media ( max-width: 1999px ) {
    body { background-image: url("images/bg-2000.jpg") }
}

@media ( max-width: 1499px ) {
    body { background-image: url("images/bg-1500.jpg") }
}

@media ( max-width: 999px ) {
    body { background-image: url("images/bg-1000.jpg") }
    .main-container { width: auto; margin: 0 20px }
    .avatar { margin-right: 10px }
    .author-area .bio { width: 230px }
}

@media ( max-width: 767px ) {
    body { background-image: url("images/bg-768.jpg") }
    .main-container { margin: 0 }
    .menu-container { margin-top: 0 }
    .menu-container ul { background-color: #4a4a4a }
    .menu-container ul li a { color: #ffffff }
    .header { margin: 20px }
    .header h1 { display: none }
    .header .logo { width: auto; height: auto; padding: 5px 0 0; background: none; color: #ffffff }
    .header .logo strong { display: inline }
    .content { border-radius: 0; padding: 20px }
    .back-link { width: auto }
    .stats-area ul, .author-area > .left { width: auto; float: none }
    .comment-respond input, .comment-respond textarea, .form-submit input { width: 90% }
}

/* Fonts */
@font-face { font-family: 'GothamHTF-Medium'; src: url('fonts/gotham-htm/GothamHTF-Medium.eot'); src: url('fonts/gotham-htm/GothamHTF-Medium.eot?#iefix') format('embedded-opentype'), url('fonts/gotham-htm/GothamHTF-Medium.woff') format('woff'), url('fonts/gotham-htm/GothamHTF-Medium.ttf') format('truetype'), url('fonts/gotham-htm/GothamHTF-Medium.svg#GothamHTF-Medium') format('svg'); font-weight: normal; font-style: normal }
@font-face { font-family: 'GothamHTF-XLight'; src: url('fonts/gotham-htm/GothamHTF-XLight.eot'); src: url('fonts/gotham-htm/GothamHTF-XLight.eot?#iefix') format('embedded-opentype'), url('fonts/gotham-htm/GothamHTF-XLight.woff') format('woff'), url('fonts/gotham-htm/GothamHTF-XLight.ttf') format('truetype'), url('fonts/gotham-htm/GothamHTF-XLight.svg#GothamHTF-XLight') format('svg'); font-weight: normal; font-style: normal }

